feat(audio): release template
