# nas-web/docs/swagger.json
@@ -699,6 +699,56 @@
                 }
             }
         },
+        "/v1/audio/transcriptions": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Transcribes audio into the input language",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Audio"
+                ],
+                "summary": "Transcribes audio into the input language",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "audio file data",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "input audio language [optional]",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "response data",
+                        "schema": {
+                            "$ref": "#/definitions/formjson.TranscriptionsResp"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/chat/context_stream": {
             "post": {
                 "security": [
@@ -1929,6 +1979,15 @@
             "properties": {
                 "status": {
                     "description": "基本状态",
+                    "type": "string"
+                }
+            }
+        },
+        "formjson.TranscriptionsResp": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "description": "assistant answer",
                     "type": "string"
                 }
             }
